[gd_scene load_steps=16 format=3 uid="uid://bgdonxn125jnw"]

[ext_resource type="Script" path="res://Scene/Script/SceneCorridorM.gd" id="1_3b2jb"]
[ext_resource type="PackedScene" uid="uid://c41qifx44ab2g" path="res://Carte/CarteScene/MapCorridorMillieu.tscn" id="1_eynko"]
[ext_resource type="PackedScene" uid="uid://tki2apulyx4e" path="res://Joueur/joueur.tscn" id="2_stecf"]
[ext_resource type="Script" path="res://Scene/Script/CMversCG.gd" id="3_dxuq2"]
[ext_resource type="Script" path="res://Scene/Script/CMversCD.gd" id="4_h17oq"]
[ext_resource type="Texture2D" uid="uid://idnl1hauh4uk" path="res://UI/Keyboard Letters and Symbols.png" id="6_a7p37"]
[ext_resource type="PackedScene" uid="uid://c81mpte26ou7w" path="res://UI/tuile_boite_de_texte.tscn" id="7_8cq34"]
[ext_resource type="FontFile" uid="uid://dk537wexvu7ax" path="res://UI/SFPixelate.ttf" id="8_no73l"]
[ext_resource type="PackedScene" uid="uid://i0y3uc5jfcuj" path="res://UI/menu_pause.tscn" id="9_awgta"]
[ext_resource type="Texture2D" uid="uid://d17prr77h8jh1" path="res://UI/image/53.png" id="10_p6x0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahvnn"]
size = Vector2(40, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74ttp"]
size = Vector2(38, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwiux"]
size = Vector2(61.5, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_biuy2"]
size = Vector2(56, 10)

[sub_resource type="LabelSettings" id="LabelSettings_vphtr"]
font = ExtResource("8_no73l")

[node name="map_test" type="Node2D"]
script = ExtResource("1_3b2jb")

[node name="StaticBody2D" parent="." instance=ExtResource("1_eynko")]
position = Vector2(561, 409)

[node name="Joueur" parent="." instance=ExtResource("2_stecf")]
position = Vector2(561, 129)

[node name="CMversCG" type="Area2D" parent="."]
script = ExtResource("3_dxuq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CMversCG"]
position = Vector2(69, 372.5)
shape = SubResource("RectangleShape2D_ahvnn")

[node name="CMversCD" type="Area2D" parent="."]
script = ExtResource("4_h17oq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CMversCD"]
position = Vector2(1054, 377.5)
shape = SubResource("RectangleShape2D_74ttp")

[node name="CMAscenseur" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CMAscenseur"]
position = Vector2(558, 154)
shape = SubResource("RectangleShape2D_bwiux")

[node name="F" type="Sprite2D" parent="CMAscenseur"]
visible = false
texture_filter = 1
position = Vector2(559, 21)
scale = Vector2(2, 2)
texture = ExtResource("6_a7p37")
hframes = 8
vframes = 14
frame = 21

[node name="CMPorte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CMPorte"]
position = Vector2(272, 157)
shape = SubResource("RectangleShape2D_biuy2")

[node name="F" type="Sprite2D" parent="CMPorte"]
visible = false
texture_filter = 1
position = Vector2(272, 36)
scale = Vector2(2, 2)
texture = ExtResource("6_a7p37")
hframes = 8
vframes = 14
frame = 21

[node name="MenuDeplacement" type="CanvasLayer" parent="."]
visible = false

[node name="Tuile_boite_de_texte" parent="MenuDeplacement" instance=ExtResource("7_8cq34")]
layer_0/tile_data = PackedInt32Array(983072, 0, 0, 1048608, 0, 1, 983073, 65536, 0, 1048609, 327680, 0, 983082, 524288, 0, 1048618, 393216, 0, 983083, 589824, 0, 1048619, 589824, 1, 983074, 65536, 0, 983075, 131072, 0, 983076, 196608, 0, 983077, 65536, 0, 983078, 131072, 0, 983079, 65536, 0, 983080, 131072, 0, 983081, 196608, 0, 1114145, 327680, 1, 1048610, 393216, 0, 1114146, 393216, 1, 1179681, 327680, 0, 1245217, 327680, 1, 1179682, 393216, 0, 1245218, 393216, 1, 1179683, 327680, 0, 1245219, 327680, 1, 1179684, 393216, 0, 1245220, 393216, 1, 1179685, 327680, 0, 1245221, 327680, 1, 1179686, 393216, 0, 1245222, 393216, 1, 1179687, 327680, 0, 1245223, 327680, 1, 1179688, 393216, 0, 1245224, 393216, 1, 1179689, 327680, 0, 1245225, 327680, 1, 1179690, 393216, 0, 1245226, 393216, 1, 1048616, 393216, 0, 1114152, 393216, 1, 1048617, 327680, 0, 1114153, 327680, 1, 1114154, 393216, 1, 1048615, 327680, 0, 1114151, 327680, 1, 1048613, 327680, 0, 1114149, 327680, 1, 1048614, 393216, 0, 1114150, 393216, 1, 1048611, 327680, 0, 1114147, 327680, 1, 1048612, 393216, 0, 1114148, 393216, 1, 1310753, 327680, 0, 1376289, 327680, 1, 1310754, 393216, 0, 1376290, 393216, 1, 1310755, 327680, 0, 1376291, 327680, 1, 1310756, 393216, 0, 1376292, 393216, 1, 1310757, 327680, 0, 1376293, 327680, 1, 1310758, 393216, 0, 1376294, 393216, 1, 1310759, 327680, 0, 1376295, 327680, 1, 1310760, 393216, 0, 1376296, 393216, 1, 1310761, 327680, 0, 1376297, 327680, 1, 1310762, 393216, 0, 1376298, 393216, 1, 1441825, 327680, 0, 1507361, 327680, 1, 1441826, 393216, 0, 1507362, 393216, 1, 1441827, 327680, 0, 1507363, 327680, 1, 1441828, 393216, 0, 1507364, 393216, 1, 1441829, 327680, 0, 1507365, 327680, 1, 1441830, 393216, 0, 1507366, 393216, 1, 1441831, 327680, 0, 1507367, 327680, 1, 1441832, 393216, 0, 1507368, 393216, 1, 1441833, 327680, 0, 1507369, 327680, 1, 1441834, 393216, 0, 1507370, 393216, 1, 1572897, 327680, 0, 1638433, 327680, 1, 1572898, 393216, 0, 1638434, 393216, 1, 1572899, 327680, 0, 1638435, 327680, 1, 1572900, 393216, 0, 1638436, 393216, 1, 1572901, 327680, 0, 1638437, 327680, 1, 1572902, 393216, 0, 1638438, 393216, 1, 1572903, 327680, 0, 1638439, 327680, 1, 1572904, 393216, 0, 1638440, 393216, 1, 1572905, 327680, 0, 1638441, 327680, 1, 1572906, 393216, 0, 1638442, 393216, 1, 1114144, 262144, 0, 1179680, 262144, 1, 1310752, 262144, 1, 1376288, 262144, 1, 1245216, 262144, 0, 1441824, 262144, 0, 1507360, 262144, 1, 1572896, 262144, 0, 1638432, 262144, 1, 1114155, 458752, 0, 1179691, 458752, 1, 1245227, 458752, 0, 1310763, 458752, 1, 1376299, 458752, 0, 1441835, 458752, 1, 1507371, 458752, 0, 1572907, 458752, 0, 1638443, 458752, 1, 1703968, 786432, 0, 1769504, 786432, 0, 1703969, 851968, 0, 1769505, 851968, 0, 1703970, 393216, 0, 1703971, 393216, 0, 1703972, 393216, 0, 1703973, 393216, 0, 1703974, 393216, 0, 1703975, 393216, 0, 1703976, 393216, 0, 1703977, 393216, 0, 1703978, 0, 12, 1769514, 851968, 0, 1703979, 65536, 12, 1769515, 65536, 12, 1769506, 851968, 0, 1769507, 851968, 0, 1769508, 851968, 0, 1769509, 851968, 0, 1769510, 851968, 0, 1769511, 851968, 0, 1769512, 851968, 0, 1769513, 851968, 0, 1835040, 786432, 0, 1835041, 851968, 0, 1900576, 786432, 0, 1900577, 851968, 0, 1966112, 786432, 1, 1966113, 851968, 1, 1835042, 851968, 0, 1835050, 851968, 0, 1900586, 0, 12, 1900585, 851968, 0, 1900584, 851968, 0, 1900583, 851968, 0, 1900582, 851968, 0, 1900581, 851968, 0, 1900580, 851968, 0, 1900579, 327680, 0, 1900578, 327680, 0, 1835043, 851968, 0, 1835044, 851968, 0, 1835045, 851968, 0, 1835046, 851968, 0, 1835047, 851968, 0, 1835048, 851968, 0, 1835049, 851968, 0, 1966122, 0, 13, 1900587, 65536, 12, 1966123, 65536, 13, 1835051, 65536, 12, 1966121, 0, 13, 1966120, 0, 13, 1966119, 0, 13, 1966118, 0, 13, 1966117, 0, 13, 1966116, 0, 13, 1966115, 0, 13, 1966114, 0, 13)

[node name="Titre" type="Label" parent="MenuDeplacement"]
offset_left = 522.0
offset_top = 254.0
offset_right = 694.0
offset_bottom = 277.0
text = "Ce déplacer vers:"
label_settings = SubResource("LabelSettings_vphtr")

[node name="btnChambre" type="Button" parent="MenuDeplacement"]
offset_left = 533.0
offset_top = 283.0
offset_right = 682.0
offset_bottom = 314.0
text = "Chambre"

[node name="btnCafeteria" type="Button" parent="MenuDeplacement"]
offset_left = 533.0
offset_top = 320.0
offset_right = 682.0
offset_bottom = 351.0
text = "Caféteria
"

[node name="btnRetour" type="Button" parent="MenuDeplacement"]
offset_left = 578.0
offset_top = 450.0
offset_right = 639.0
offset_bottom = 481.0
text = "Retour"

[node name="btnTravail" type="Button" parent="MenuDeplacement"]
offset_left = 533.0
offset_top = 357.0
offset_right = 682.0
offset_bottom = 388.0
text = "Travail/Restaurant
"

[node name="btnOxymel" type="Button" parent="MenuDeplacement"]
offset_left = 534.0
offset_top = 394.0
offset_right = 676.0
offset_bottom = 427.0
text = "Café Oxymel"

[node name="MessageDebut" type="Node2D" parent="."]
visible = false

[node name="Tuile_boite_de_texte" parent="MessageDebut" instance=ExtResource("7_8cq34")]
scale = Vector2(2, 2)
layer_0/tile_data = PackedInt32Array(393229, 0, 0, 458765, 0, 1, 393230, 65536, 0, 458766, 0, 7, 393237, 524288, 0, 458773, 524288, 1, 393238, 589824, 0, 458774, 589824, 1, 393231, 65536, 0, 458767, 0, 7, 393232, 131072, 0, 458768, 0, 7, 393233, 196608, 0, 458769, 0, 7, 393234, 65536, 0, 458770, 65536, 1, 393235, 131072, 0, 458771, 131072, 1, 393236, 196608, 0, 458772, 196608, 1, 786445, 786432, 0, 851981, 786432, 1, 786446, 851968, 0, 851982, 851968, 1, 655373, 262144, 0, 720909, 262144, 1, 655374, 327680, 0, 720910, 327680, 1, 655375, 0, 7, 524301, 262144, 0, 589837, 262144, 1, 524302, 0, 7, 589838, 0, 7, 524303, 0, 7, 589839, 0, 7, 786453, 0, 12, 851989, 0, 13, 786454, 65536, 12, 851990, 65536, 13, 720918, 65536, 12, 655382, 65536, 12, 589846, 65536, 12, 524310, 65536, 12, 786452, 0, 7, 720915, 0, 7, 720914, 0, 7, 720913, 0, 7, 720912, 0, 7, 786447, 0, 7, 786448, 0, 7, 786450, 0, 7, 786451, 0, 7, 786449, 0, 7, 524304, 0, 7, 524306, 0, 7, 524307, 0, 7, 524308, 0, 7, 524309, 0, 7, 589845, 0, 7, 655381, 0, 7, 720917, 0, 7, 720916, 0, 7, 655379, 0, 7, 655378, 0, 7, 655377, 0, 7, 589840, 0, 7, 589841, 0, 7, 589842, 0, 7, 589843, 0, 7, 589844, 0, 7, 655380, 0, 7, 655376, 0, 7, 524305, 0, 7, 851988, 0, 5, 851987, 0, 5, 851986, 0, 5, 851984, 0, 5, 851983, 0, 5, 851985, 0, 5, 720911, 0, 7)

[node name="Label" type="Label" parent="MessageDebut"]
offset_left = 434.0
offset_top = 214.0
offset_right = 1241.0
offset_bottom = 240.0
text = "« Disparition des élèves de l’École 
Cégep Garneau : une piste avec les
professeurs semble envisageable » "

[node name="Label2" type="Label" parent="MessageDebut"]
offset_left = 435.0
offset_top = 303.0
offset_right = 1405.0
offset_bottom = 329.0
text = "Personnage du joueur : J’ai toujours
rêvé de résoudre des affaires; c’est
peut-être un signe, il faut que je 
mène mon enquête… "

[node name="Button" type="Button" parent="MessageDebut"]
offset_left = 553.0
offset_top = 455.0
offset_right = 593.0
offset_bottom = 495.0
icon = ExtResource("10_p6x0l")

[node name="MenuPause" parent="." instance=ExtResource("9_awgta")]
position = Vector2(36, 80)

[connection signal="body_entered" from="CMversCG" to="." method="_on_c_mvers_cg_body_entered"]
[connection signal="body_entered" from="CMversCG" to="CMversCG" method="_on_body_entered"]
[connection signal="body_entered" from="CMversCD" to="CMversCD" method="_on_body_entered"]
[connection signal="body_entered" from="CMAscenseur" to="." method="_on_c_mvers_nimpote_body_entered"]
[connection signal="body_exited" from="CMAscenseur" to="." method="_on_cm_ascenseur_body_exited"]
[connection signal="body_entered" from="CMPorte" to="." method="_on_cm_porte_body_entered"]
[connection signal="body_exited" from="CMPorte" to="." method="_on_cm_porte_body_exited"]
[connection signal="pressed" from="MenuDeplacement/btnChambre" to="." method="_on_btn_chambre_pressed"]
[connection signal="pressed" from="MenuDeplacement/btnCafeteria" to="." method="_on_btn_cafeteria_pressed"]
[connection signal="pressed" from="MenuDeplacement/btnRetour" to="." method="_on_btn_retour_pressed"]
[connection signal="pressed" from="MenuDeplacement/btnTravail" to="." method="_on_btn_travail_pressed"]
[connection signal="pressed" from="MenuDeplacement/btnOxymel" to="." method="_on_btn_oxymel_pressed"]
[connection signal="pressed" from="MessageDebut/Button" to="." method="_on_button_pressed"]
[connection signal="sauvegarder" from="MenuPause" to="Joueur" method="_on_menu_pause_sauvegarder"]
